--- a/VP_QM_winform.csproj
+++ b/VP_QM_winform.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Controller\ArduinoController.cs" />
     <Compile Include="Controller\CameraController.cs" />
+    <Compile Include="Controller\VisionController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
