--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.ML.OnnxRuntime" version="1.20.1" targetFramework="net472" />
   <package id="Microsoft.ML.OnnxRuntime.Managed" version="1.20.1" targetFramework="net472" />
+  <package id="MQTTnet" version="4.3.7.1207" targetFramework="net472" />
   <package id="OpenCvSharp4" version="4.10.0.20241108" targetFramework="net472" />
   <package id="OpenCvSharp4.runtime.win" version="4.10.0.20241108" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
