--- a/VP_QM_winform.csproj
+++ b/VP_QM_winform.csproj
@@ -82,6 +82,7 @@
     <Compile Include="ComManager\MQTTManager.cs" />
     <Compile Include="Controller\ArduinoController.cs" />
     <Compile Include="Controller\CameraController.cs" />
+    <Compile Include="Controller\FormController.cs" />
     <Compile Include="Controller\VisionController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
