feature lot조회 DB직접 연결방식 -> RestAPI 호출방식

--- a/VP_QM_winform.csproj
+++ b/VP_QM_winform.csproj
@@ -111,6 +111,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComManager\HttpManager.cs" />
     <Compile Include="ComManager\MQTTManager.cs" />
     <Compile Include="ComManager\SQLManager.cs" />
     <Compile Include="ComManager\VPBusManager.cs" />
