feature 안쓰는 클래스 정리

--- a/VP_QM_winform.csproj
+++ b/VP_QM_winform.csproj
@@ -159,6 +159,7 @@
     <Compile Include="DTO\LoginInfoDTO.cs" />
     <Compile Include="DTO\LoginResDTO.cs" />
     <Compile Include="DTO\LoginReqDTO.cs" />
+    <Compile Include="DTO\MenuInfoDTO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
